--- a/markdown-wiki2-extension/index.html
+++ b/markdown-wiki2-extension/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MainWiki3-Extension</title>
+    <title>MarkdownWiki2-Extension</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <h1>MainWiki3-Extension</h1>
+    <h1>MarkdownWiki2-Extension</h1>
     <form>
         <div class="form-group">
             <label>Category</label>
